-----------------------------------

BUG FIXES

    o Subsetting the S4 part of Binmat objects by row is now an error
    o Providing non-positive m/z values to 'readImzML' is now an error
    o Elements of 'imageData' that fail to 'combine' or which
        are missing from one or more of the objects are now
        dropped from the result with warning rather than failing

CHANGES IN VERSION 1.3.2 [2016-3-29]
-----------------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Added 'image3D' method for plotting 3D images
    o Added 'batchProcess' method for batch pre-processing

CHANGES IN VERSION 1.3.1 [2016-3-14]
-----------------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Added 'mass.accuracy' and 'units.accuracy' arguments for
        controlling the m/z accuracy when reading 'processed' imzML
    o Function 'reduceDimension.bin' now takes argument 'units' with
        value 'ppm' or 'mz', and new corresponding defaults

BUG FIXES

    o Fixed bug in reading 'processed' imzML format that caused
        mass spectra to be reconstructed in the wrong order
    o Improved speed accessing columns of Hashmat sparse matrices
    o In 'pixelApply' and 'featureApply', zero-length return values
        are no longer returned as a list when '.simplify=FALSE'
    o Function 'peakAlign.diff' should be more memory efficient now

CHANGES IN VERSION 1.3.0 [2015-12-16]
-----------------------------------

SIGNIFICANT USER-VISIBLE CHANGES

    o Added experimental Binmat class for working with on-disk matrices
    o Added 'attach.only' argument to readImzML and readAnalyze
    o Added experimental support for 3D files from benchmark datasets
    o Added experimental support for plotting 3D images
    o Added experimental support for 'processed' imzML format

BUG FIXES

    o Fixed bug in plotting 3D image slices in the z dimension
    o Fixed bug where large imzML files could not be read due to byte